# whisper-memo-app

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf  run.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  crud.py  db.py  main.py  models.py  ollama_service.py  schemas.py  whisper_service.py
backend/app/routers/: projects.py  transcriptions.py
frontend/: .dockerignore:Zone.Identifier  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ProjectDrawer.tsx  Recorder.tsx  TranscriptionItem.tsx  TranscriptionList.tsx
frontend/src/types/: index.ts
